# keystone-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: PHILOSOPHY.md
scripts/: create_dynamodb_tables.py
src/keystone_agent/: __init__.py  __main__.py  cli.py  config.py
src/keystone_agent/agents/: __init__.py  orchestrator.py  specialists.py  tools.py
src/keystone_agent/core/: __init__.py  runner.py
src/keystone_agent/prompts/: capital_allocator.md  creative_director.md  growth_distribution.md  orchestrator.md  product_operator.md  product_purist.md  risk_reality.md  systems_architecture.md
src/keystone_agent/schemas/: __init__.py  inputs.py  outputs.py
src/keystone_agent/storage/: __init__.py  session.py
src/keystone_agent/utils/: __init__.py  background.py  formatters.py  prompt_loader.py
tests/: __init__.py  conftest.py  test_consensus.py  test_schemas.py
